--- a/views/count.handlebars
+++ b/views/count.handlebars
@@ -1,1 +1,8 @@
-<h1>You have visited this site {{count}} times before.</h1>
+{{#unless err}}
+<h1>Hello! You have visited this page {{count}} times before.</h1>
+<form action="/count" method="post">
+	<input type="submit" name="command" value="resetCount">
+</form>
+{{else}}
+<h1>Invalid submission!</h1>
+{{/unless}}
