--- a/views/toDo.handlebars
+++ b/views/toDo.handlebars
@@ -17,8 +17,8 @@
   {{/each}}
 </ul>
 {{/if}}
-/*
-<form method = "post">
-  <input type="submit" name="Log Out" value="Log Out">
-</form>
-*/
+
+//<form method = "post">
+//  <input type="submit" name="Log Out" value="Log Out">
+//</form>
+
