--- a/views/toDo.handlebars
+++ b/views/toDo.handlebars
@@ -18,7 +18,7 @@
 </ul>
 {{/if}}
 
-//<form method = "post">
-//  <input type="submit" name="Log Out" value="Log Out">
-//</form>
+<form method = "post">
+  <input type="submit" name="Log Out" value="Log Out">
+</form>
 
