--- a/views/toDo.handlebars
+++ b/views/toDo.handlebars
@@ -17,8 +17,8 @@
   {{/each}}
 </ul>
 {{/if}}
-
+<br>
 <form method = "post">
-  <input type="submit" name="Log Out" value="Log Out">
+  <input type="submit" name="End Session" value="Log Out">
 </form>
 
