--- a/views/toDo.handlebars
+++ b/views/toDo.handlebars
@@ -19,6 +19,6 @@
 {{/if}}
 <br>
 <form method = "post">
-  <input type="submit" name="End Session" value="Log Out">
+  <input type="submit" name="Log Out" value="End Session">
 </form>
 
