--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
  <head>
   <meta charset="UTF-8">
   <title>CS290 Sessions Practice</title>
+  <link rel="stylesheet" href="/css/style.css">
  </head>
 <body>
 	{{{body}}}
