--- a/views/get-post-ex.handlebars
+++ b/views/get-post-ex.handlebars
@@ -1,4 +1,8 @@
-<h1>The response from Open Weather Map is:</h1>
-<pre>{{owm}}</pre>
-<h1>The response from httpbin is:</h1>
-<pre>{{httpbin}}</pre>
+<h1>The first response from Open Weather Map is:</h1>
+<pre>{{owm1}}</pre>
+<h1>The second response from Open Weather Map is:</h1>
+<pre>{{owm2}}</pre>
+<h1>The first response from httpbin is:</h1>
+<pre>{{httpbin1}}</pre>
+<h1>The second response from httpbin is:</h1>
+<pre>{{httpbin2}}</pre>
